--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!--  YAML Snake Dependency  -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.26</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
